--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 		<p>北京某互联网金融公司 版权所有 © 2015-2016</p>
 	</footer>
 
-	<script src="http://cdn.bootcss.com/jquery/1.10.1/jquery.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script src="js/owl.carousel.min.js"></script>  <!-- 轮播 -->
 	<script src="js/picturefill.min.js"></script>  <!-- picture标签兼容 -->
 	<script src="js/main.js"></script>
